--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,6 +1,19 @@
+:root {
+    --main-text-color: #a34817;
+    --main-bg-color: #494949;
+
+    --main-element-text-color: #ffcdb7;
+    --main-element-bg-color: darkslategray;
+
+    --button-hover-color: #284343;
+    --button-active-color: #497878;
+
+    --input-distance-left: 250px;
+}
+
 html {
-    background-color: #494949;
-    color: #a34817;
+    background-color: var(--main-bg-color);
+    color: var(--main-text-color);
     font-family: Bahnschrift, serif;
 }
 
@@ -13,13 +26,30 @@ label {
     font-size: 25px;
 }
 
-select, input {
-    position: relative;
+select, input, button {
     margin: 0 10px;
-    background-color: darkslategray;
-    color: #ffcdb7;
+    background-color: var(--main-element-bg-color);
+    color: var(--main-element-text-color);
     font-size: 20px;
     height: 30px;
     width: 20%;
     border: none;
+}
+
+input, select {
+    position: absolute;
+    left: calc(var(--input-distance-left) + 30px + 20%);
+}
+
+.first {
+    position: absolute;
+    left: var(--input-distance-left);
+}
+
+button:hover {
+    background-color: var(--button-hover-color);
+}
+
+button:active {
+    background-color: var(--button-active-color);
 }
